<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diario.Gravar_dados_diario"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-3dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="291dp"
        android:layout_height="59dp"
        android:layout_marginTop="130dp"
        android:hint="@string/insiraotitulo"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_title_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titulonovaanotacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/datanovaanotacaoedt1"
        android:layout_width="291dp"
        android:layout_height="59dp"
        android:layout_marginTop="50dp"
        android:hint="Clique para adicionar a data"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datanovaanotacaoedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="313dp"
        android:layout_height="186dp"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/insiraotexto"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/menu_diario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notadiarioedt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_enviar_anotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:text="@string/enviaranotacao"
        style="?attr/materialButtonOutlinedStyle"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>